# konker

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ormDiagram.PostgreSQL.sql
include/: inlezen.h  person.h
python/: Untitled Document  addressLijst  config.py  controller.py  dataGenerator.py  dummpyhorecaLijst  dummpyplacesdata  functiontesting.py  googlemaps  handelinputdata.py  horecaLeden  horecalijst  main.py  main.spec  open webpage.py  reistijdClubs  rooster.xls  savedWebPage  tegenstanderLijst
src/: inlezen.cc  main.cc  person.cc
src/server/kotlin/entities/: club.kt  player.kt
src/server/python/: beschikbaarheid.py  config.py  controller.py  dataGenerator.py  functiontesting.py  handelinputdata.py  key.py  output.py  score.py  validityConfig.py  verifyinputdata.py
